--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1032,13 +1032,23 @@ body {
   font-size: 14px;
   font-weight: 700;
 }
+.navbar .contain .login-user .image-content {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.06);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  -webkit-margin-start: 10px;
+          margin-inline-start: 10px;
+}
 .navbar .contain .login-user img {
   width: 24px;
   height: 24px;
   -o-object-fit: contain;
      object-fit: contain;
-  -webkit-margin-start: 10px;
-          margin-inline-start: 10px;
   filter: var(--primary-filter);
 }
 .navbar .contain .login-user:hover span {
@@ -1088,13 +1098,23 @@ body {
   position: relative;
   z-index: 9;
 }
+.bottom-nav .contain .bottom-nav-list li a .image-content {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: rgba(13, 122, 116, 0.1);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin-bottom: 5px;
+}
 .bottom-nav .contain .bottom-nav-list li a img {
-  width: 24px;
-  height: 24px;
+  width: 16px;
+  height: 16px;
   -o-object-fit: contain;
      object-fit: contain;
   filter: var(--primary-filter);
-  margin-bottom: 5px;
 }
 .bottom-nav .contain .bottom-nav-list li a span {
   font-size: 14px;
@@ -1110,12 +1130,11 @@ body {
   width: 15px;
   height: 15px;
   font-size: 10px;
-  background-color: var(--secondary-color);
   display: flex;
   align-items: center;
   align-content: center;
   justify-content: center;
-  color: var(--light-color);
+  color: var(--secondary-color);
   position: absolute;
   top: calc(50% - 7.5px);
   left: 0px;
@@ -1497,7 +1516,7 @@ header .contain .button-list li a:hover::after {
   font-size: 15px;
   font-weight: 900;
   margin: 0px;
-  color: var(--dark-color);
+  color: var(--primary-color);
 }
 .product-box .contain .flex-data .fav-btn {
   width: 20px;
@@ -1511,12 +1530,21 @@ header .contain .button-list li a:hover::after {
      object-fit: contain;
   filter: var(--gray-color);
 }
+.product-box .contain .flex-data .fav-btn img.fill-heart {
+  display: none;
+}
 .product-box .contain .flex-data .fav-btn:hover img {
   -webkit-animation: tada 0.3s linear both;
           animation: tada 0.3s linear both;
 }
 .product-box .contain .flex-data .fav-btn.active img {
   filter: invert(18%) sepia(49%) saturate(3588%) hue-rotate(337deg) brightness(115%) contrast(92%);
+}
+.product-box .contain .flex-data .fav-btn.active img.fill-heart {
+  display: block;
+}
+.product-box .contain .flex-data .fav-btn.active img.border-heart {
+  display: none;
 }
 .product-box .contain p {
   margin: 19px 0px;
@@ -1575,7 +1603,7 @@ header .contain .button-list li a:hover::after {
   border: 0px;
 }
 .modal .modal-dialog .modal-content .modal-body {
-  padding: 20px 15px;
+  padding: 20px 30px;
   position: relative;
   z-index: 9;
 }
@@ -1602,7 +1630,7 @@ header .contain .button-list li a:hover::after {
   text-align: center;
   width: 100%;
   margin-bottom: 25px;
-  color: var(--primary-color);
+  color: #4A4A4A;
   font-size: 18px;
   font-weight: 900;
 }
@@ -1612,17 +1640,23 @@ header .contain .button-list li a:hover::after {
 .modal .modal-dialog .modal-content .modal-body .form-contain .form-data {
   width: 100%;
   margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
 }
 .modal .modal-dialog .modal-content .modal-body .form-contain .form-data label {
-  font-size: 16px;
+  width: 95px;
+  display: flex;
+  font-size: 13px;
   font-weight: 500;
   color: var(--primary-color);
-  margin-bottom: 15px;
+  margin-bottom: 0px;
 }
 .modal .modal-dialog .modal-content .modal-body .form-contain .form-data .form-group {
   margin-bottom: 0px;
-  width: 100%;
-  height: 40px;
+  width: calc(100% - 95px);
+  height: 35px;
   position: relative;
   z-index: 9;
 }
@@ -1639,7 +1673,7 @@ header .contain .button-list li a:hover::after {
   height: 15px;
   background: url("../images/down_arrow.svg") center/contain no-repeat;
   top: calc(50% - 7.5px);
-  left: 10px;
+  left: 5px;
   z-index: 9;
   pointer-events: none;
 }
@@ -1653,7 +1687,7 @@ header .contain .button-list li a:hover::after {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  border-radius: 50px;
+  border-radius: 5px;
 }
 .modal .modal-dialog .modal-content .modal-body .form-contain .form-data .form-group .form-control::-moz-placeholder {
   color: var(--gray-color);
@@ -1740,4 +1774,24 @@ header .contain .button-list li a:hover::after {
 }
 .modal .modal-dialog .modal-content .modal-body .form-contain .link.new-account {
   color: var(--primary-color);
+}
+.modal .row-shape {
+  width: calc(100% - 74px);
+}
+.modal .full-width {
+  width: 100% !important;
+}
+.modal .bg-dark-shape .form-control {
+  border-color: #E8E8E8 !important;
+  background-color: #E8E8E8 !important;
+  color: var(--dark-color) !important;
+}
+.modal .bg-dark-shape .form-control::-moz-placeholder {
+  color: var(--dark-color) !important;
+}
+.modal .bg-dark-shape .form-control:-ms-input-placeholder {
+  color: var(--dark-color) !important;
+}
+.modal .bg-dark-shape .form-control::placeholder {
+  color: var(--dark-color) !important;
 }/*# sourceMappingURL=style.css.map */
