--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@ body {
 
 .navbar {
   width: 100%;
-  padding: 15px 0px;
+  padding: 3px 0px;
   background-color: var(--primary-color);
   position: fixed;
   top: 0;
@@ -141,7 +141,7 @@ body {
           }
 
           span {
-            font-size: 14px;
+            font-size: 11px;
             font-weight: 500;
 
             &.light {
@@ -252,6 +252,7 @@ header {
           height: 100px;
           border: 1px dashed var(--light-color);
           display: flex;
+          flex-direction: column;
           align-items: center;
           align-content: center;
           justify-content: center;
@@ -262,6 +263,14 @@ header {
           position: relative;
           z-index: 9;
           border-radius: 10px;
+
+          span {
+            font-size: 17px;
+            font-weight: 700;
+            color: var(--light-color);
+            display: block;
+            margin-top: 2px;
+          }
 
           &::after {
             content: '';
@@ -291,7 +300,7 @@ header {
 
 .announcements {
   width: 100%;
-  padding: 80px 0px 20px;
+  padding: 60px 0px 20px;
   border-bottom: 2px solid var(--light-color);
 
   img {
@@ -370,7 +379,7 @@ header {
     margin-top: 15px;
 
     .custom-btn {
-      padding: 10px 15px;
+      padding: 3px 8px;
       border-radius: 5px;
       display: flex;
       align-items: center;
@@ -387,7 +396,7 @@ header {
       }
 
       span {
-        font-size: 14px;
+        font-size: 11px;
         font-weight: 500;
         color: var(--dark-color);
       }
@@ -467,7 +476,7 @@ header {
 
 .products {
   width: 100%;
-  padding: 10px 0px 80px;
+  padding: 0px 0px 80px;
 }
 
 .map {
@@ -515,7 +524,7 @@ header {
 
     .product-img {
       width: 100%;
-      height: 100px;
+      height: 80px;
       border-radius: 10px;
       object-fit: cover;
       object-position: center;
@@ -526,6 +535,7 @@ header {
       display: flex;
       align-items: center;
       align-content: center;
+      justify-content: space-between;
 
       span {
         color: var(--dark-color);
@@ -533,35 +543,68 @@ header {
         font-weight: 500;
       }
 
-      ul {
+      .rating {
         display: flex;
         align-items: center;
         align-content: center;
-        margin-inline-start: 10px;
+        justify-content: flex-end;
+        flex-direction: row-reverse;
 
-        li {
-          margin-inline-end: 5px;
+        input {
+          position: relative;
+          width: 12px;
+          height: 12px;
+          display: flex;
+          align-items: center;
+          align-content: center;
+          justify-content: center;
+          cursor: pointer;
+          appearance: none;
+          z-index: 9;
+          margin-inline-start: 3px;
 
           &:last-child {
             margin-inline-end: 0px;
           }
 
-          a {
-            width: 10px;
-            height: 10px;
-            display: flex;
+          &::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: url('../images/star.svg') center / contain no-repeat;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            filter: invert(70%) sepia(95%) saturate(1%) hue-rotate(7deg) brightness(102%) contrast(103%);
+          }
 
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: contain;
-              filter: var(--gray-color);
+          &.active,
+          &:checked,
+          &:hover  {
+            &::before,
+            & ~ input::before {
+              filter: var(--secondary-filter);
             }
+          }
+        }
 
-            &.active {
-              img {
-                filter: var(--secondary-filter)
-              }
+        label {
+          display: flex;
+          cursor: pointer;
+          width: 10px;
+          height: 10px;
+          margin: 0px 5px 0px 0px;
+         
+          &:last-child {
+            margin-inline-end: 0px;
+          }
+
+          &:hover, &.active {
+            filter: var(--secondary-filter);
+
+            & ~ label {
+              filter: var(--secondary-filter);
             }
           }
         }
@@ -622,7 +665,7 @@ header {
 
     p {
       margin: 19px 0px;
-      font-size: 15px;
+      font-size: 11px;
       font-weight: 500;
       color: var(--dark-color);
     }
@@ -637,7 +680,7 @@ header {
       border-top: 1px solid var(--gray-color);
 
       .data {
-        font-size: 10px;
+        font-size: 9px;
         font-weight: 500;
         margin-inline-end: 10px;
 
@@ -752,6 +795,7 @@ header {
 
                 .form-control {
                   border-radius: 10px;
+                  resize: none;
                 }
               }
   
@@ -774,14 +818,14 @@ header {
                 height: 100%;
                 border: 1px solid var(--gray-color);
                 background-color: var(--light-color);
-                font-size: 15px;
+                font-size: 13px;
                 font-weight: 500;
                 appearance: none;
                 border-radius: 5px;
   
                 &::placeholder {
                   color: var(--gray-color);
-                  font-size: 15px;
+                  font-size: 13px;
                   font-weight: 500;
                 }
               }
