--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,7 +86,7 @@ body {
 
 .bottom-nav {
   width: 100%;
-  padding: 10px 0px;
+  padding: 2px 0px;
   background-color: var(--semi-dark);
   position: fixed;
   bottom: 0;
@@ -106,7 +106,7 @@ body {
       align-content: center;
 
       li {
-        margin-inline-end: 20px;
+        margin-inline-end: 10px;
 
         &:last-child {
           margin-inline-end: 0px;
@@ -193,7 +193,7 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('../images/footer_pattern.png') center / cover no-repeat;
+    background: url('../images/footer_pattern.png') center / contain no-repeat;
     top: 0;
     left: 0;
     z-index: -1;
@@ -379,8 +379,9 @@ header {
     margin-top: 15px;
 
     .custom-btn {
-      padding: 3px 8px;
-      border-radius: 5px;
+      padding: 0px 10px;
+      height: 25px;
+      border-radius: 10px;
       display: flex;
       align-items: center;
       align-content: center;
@@ -389,7 +390,6 @@ header {
       position: relative;
       z-index: 9;
       overflow: hidden;
-      outline: 1px solid #AEAEAE;
 
       &:first-child {
         margin-inline-end: 10px;
@@ -398,6 +398,8 @@ header {
       span {
         font-size: 11px;
         font-weight: 500;
+        line-height: 25px;
+        vertical-align: middle;
         color: var(--dark-color);
       }
 
@@ -421,7 +423,7 @@ header {
       }
 
       &.active {
-        outline: 1px solid var(--primary-color);
+        border: 1px solid var(--primary-color);
 
         &::after, &::before {
           background-color: var(--primary-color);
@@ -439,6 +441,8 @@ header {
       }
 
       &:hover {
+        border: 1px solid #AEAEAE;
+
         &::after, &::before {
           width: 0px;
         }
@@ -463,7 +467,7 @@ header {
 
 .heading {
   width: 100%;
-  padding: 80px 0px 20px;
+  padding: 60px 0px 20px;
 
   h1 {
     color: #CA2637;
@@ -476,7 +480,7 @@ header {
 
 .products {
   width: 100%;
-  padding: 0px 0px 80px;
+  padding: 0px 0px 40px;
 }
 
 .map {
@@ -858,7 +862,7 @@ header {
             position: relative;
             z-index: 9;
             overflow: hidden;
-            outline: 1px solid var(--semi-light);
+            border: 1px solid var(--semi-light);
       
             span {
               font-size: 14px;
