--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,11 @@
 button {
   outline: none;
   border: 0px;
+  background-color: transparent !important;
+  background: transparent;
 }
 
+input,
 .btn:focus,
 button:focus,
 input:focus,
@@ -1062,7 +1065,7 @@ body {
 
 .bottom-nav {
   width: 100%;
-  padding: 10px 0px;
+  padding: 2px 0px;
   background-color: var(--semi-dark);
   position: fixed;
   bottom: 0;
@@ -1082,8 +1085,8 @@ body {
   align-content: center;
 }
 .bottom-nav .contain .bottom-nav-list li {
-  -webkit-margin-end: 20px;
-          margin-inline-end: 20px;
+  -webkit-margin-end: 10px;
+          margin-inline-end: 10px;
 }
 .bottom-nav .contain .bottom-nav-list li:last-child {
   -webkit-margin-end: 0px;
@@ -1159,7 +1162,7 @@ header::after {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url("../images/footer_pattern.png") center/cover no-repeat;
+  background: url("../images/footer_pattern.png") center/contain no-repeat;
   top: 0;
   left: 0;
   z-index: -1;
@@ -1338,8 +1341,9 @@ header .contain .button-list li a:hover::after {
   margin-top: 15px;
 }
 .announcements .buttons-contain .custom-btn {
-  padding: 3px 8px;
-  border-radius: 5px;
+  padding: 0px 10px;
+  height: 25px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   align-content: center;
@@ -1348,7 +1352,6 @@ header .contain .button-list li a:hover::after {
   position: relative;
   z-index: 9;
   overflow: hidden;
-  outline: 1px solid #AEAEAE;
 }
 .announcements .buttons-contain .custom-btn:first-child {
   -webkit-margin-end: 10px;
@@ -1357,6 +1360,8 @@ header .contain .button-list li a:hover::after {
 .announcements .buttons-contain .custom-btn span {
   font-size: 11px;
   font-weight: 500;
+  line-height: 25px;
+  vertical-align: middle;
   color: var(--dark-color);
 }
 .announcements .buttons-contain .custom-btn::after, .announcements .buttons-contain .custom-btn::before {
@@ -1376,7 +1381,7 @@ header .contain .button-list li a:hover::after {
   right: 0;
 }
 .announcements .buttons-contain .custom-btn.active {
-  outline: 1px solid var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
 .announcements .buttons-contain .custom-btn.active::after, .announcements .buttons-contain .custom-btn.active::before {
   background-color: var(--primary-color);
@@ -1386,6 +1391,9 @@ header .contain .button-list li a:hover::after {
 }
 .announcements .buttons-contain .custom-btn.active:hover span {
   color: var(--primary-color);
+}
+.announcements .buttons-contain .custom-btn:hover {
+  border: 1px solid #AEAEAE;
 }
 .announcements .buttons-contain .custom-btn:hover::after, .announcements .buttons-contain .custom-btn:hover::before {
   width: 0px;
@@ -1405,7 +1413,7 @@ header .contain .button-list li a:hover::after {
 
 .heading {
   width: 100%;
-  padding: 80px 0px 20px;
+  padding: 60px 0px 20px;
 }
 .heading h1 {
   color: #CA2637;
@@ -1417,7 +1425,7 @@ header .contain .button-list li a:hover::after {
 
 .products {
   width: 100%;
-  padding: 0px 0px 80px;
+  padding: 0px 0px 40px;
 }
 
 .map {
@@ -1768,7 +1776,7 @@ header .contain .button-list li a:hover::after {
   position: relative;
   z-index: 9;
   overflow: hidden;
-  outline: 1px solid var(--semi-light);
+  border: 1px solid var(--semi-light);
 }
 .modal .modal-dialog .modal-content .modal-body .form-contain .custom-btn span {
   font-size: 14px;
