--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1123,6 +1123,7 @@ body {
 .bottom-nav .contain .bottom-nav-list li a span {
   font-size: 11px;
   font-weight: 500;
+  position: relative;
 }
 .bottom-nav .contain .bottom-nav-list li a span.light {
   color: var(--light-color);
@@ -1140,8 +1141,8 @@ body {
   justify-content: center;
   color: var(--secondary-color);
   position: absolute;
-  top: calc(50% - 7.5px);
-  left: 0px;
+  top: -10px;
+  left: -2px;
   border-radius: 50%;
 }
 .bottom-nav .contain .bottom-nav-list li a:hover img {
