--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -67,6 +67,10 @@ input:focus,
     box-shadow: 0 0 0 0 rgba($color: #000000, $alpha: 0);
 }
 
+input[type="radio"] {
+    border: 0px;
+}
+
 a {
     text-decoration: none !important;
 }
