--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ input:focus,
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }
 
+input[type=radio] {
+  border: 0px;
+}
+
 a {
   text-decoration: none !important;
 }
@@ -1001,6 +1005,7 @@ ul {
 
 body {
   background-color: var(--semi-light);
+  overflow: hidden;
 }
 
 .navbar {
